<resources>
    <string name="app_name">EasyGift</string>

    <string name="no_internet">NO INTERNET</string>
    <string name="unknown_error"> UNKNOWN ERROR</string>
    <string name="loading"> LOADING</string>
    <string name="finished_loading">LOADING STOPPED</string>

    <string name="full_name">%s %s</string>
    <string name="price">%s сом</string>
    <string name="left">осталось %d дней</string>

    <string name="home">дом</string>
    <string name="search">поиск</string>
    <string name="create">публикация</string>
    <string name="profile">профиль</string>

    <string name="search_hint">Введите ник</string>
    <string name="find">Найти</string>

    <string name="btn_continue">Продолжить</string>
    <string name="greeting">Добро пожаловать!</string>
    <string name="auth_btn">Войти в профиль</string>
    <string name="reg_btn">Зарегистрироваться</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>

    <string name="hint_nickname">Введите новый ник</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_first_name">Введите свое имя</string>
    <string name="hint_surname">Введите свою фамилию</string>
    <string name="hint_email">Введите почту</string>
    <string name="hint_birthday">Введите дату рождения - дд/мм/гггг</string>

    <string name="hint_wish_description">Введите свое пожелание со всеми подробностями</string>
    <string name="hint_wish_url">Вставьте ссылку (опционально)</string>
    <string name="hint_wish_price">Введите стоимость в сомах (опционально)</string>
    <string name="btn_change_user">Редактировать</string>

    <string name="empty_error">Это поле обязательно для заполнения</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="wrong_nickname">Неверный логин</string>
    <string name="password_format_mismatch">Пароль должен состоять из более чем 8 знаков, заглавной и прописной букв, чисел</string>
    <string name="birthday_format_mismatch">Формат даты - дд/мм/гггг (используйте \'/\')</string>
    <string name="taken_nickname_error">Пользователь с таким ником существует. Введите другой</string>
</resources>